# plugpluginin

./: .gitignore  Makefile  README.md  pyproject.toml
plugins/guest-plugin/: Cargo.toml
plugins/guest-plugin/src/: lib.rs
plugins/host-plugin/: Cargo.toml
plugins/host-plugin/src/: lib.rs
plugpluginin/: __init__.py
